# linkja-crypto

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile.am  README.md  build-nosecrets.sh  build-win-nosecrets.bat  build-win.bat  build-win.sh  build.sh  cmake_install.cmake  configure.ac  libtool  pom.xml  prep-make.sh  qc.sh  test.sh
lib/openssl/include/openssl/: opensslconf.h
lib/openssl/macos/: libcrypto.3.dylib  libssl.3.dylib
lib/openssl/windows/: libssl.lib
src/: CMakeLists.txt  cmake_install.cmake  linkja-crypto.c  linkja-crypto.h
src/include/: linkja_crypto_Library.h  org_linkja_crypto_Library.h
src/java/: Library.java
src/main/java/: AesResult.java  Library.java  RsaResult.java
src/openssl/: CMakeLists.txt
src/openssl/asn1/: CMakeLists.txt
src/openssl/bio/: CMakeLists.txt
src/openssl/bn/: CMakeLists.txt
src/openssl/buffer/: CMakeLists.txt
src/openssl/engine/: CMakeLists.txt
src/openssl/rsa/: CMakeLists.txt
src/test/c/: CMakeLists.txt  invalid-private-test.key  invalid-public-test.key  private-test.key  public-test.key  test-linkja-crypto-aes.c  test-linkja-crypto-conversions.c  test-linkja-crypto-hash-input-data.c  test-linkja-crypto-hash-supplemental-data.c  test-linkja-crypto-hash.c  test-linkja-crypto-rsa.c  test-linkja-crypto-token.c
src/test/java/: Test.java
test/: Test.java
test/c/: CMakeLists.txt  test-linkja-crypto-hash.c
test/java/: Test.java
