set(rsa_rsrc
  rsa_ameth.c
  rsa_asn1.c
  rsa_chk.c
  rsa_crpt.c
  rsa_depr.c
  rsa_err.c
  rsa_gen.c
  rsa_lib.c
  rsa_local.h
  rsa_meth.c
  rsa_mp.c
  rsa_none.c
  rsa_oaep.c
  rsa_ossl.c
  rsa_pk1.c
  rsa_pmeth.c
  rsa_prn.c
  rsa_pss.c
  rsa_saos.c
  rsa_sign.c
  rsa_sp800_56b_check.c
  rsa_sp800_56b_gen.c
  rsa_ssl.c
  rsa_x931.c
  rsa_x931g.c
)

add_library(rsa ${rsa_rsrc})
